--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header__container">
         <a href="" class="header__logo link logo-span--color-dark"><span class="web">Web</span>Studio</a>
             <nav class="header__navigation">
@@ -46,15 +46,15 @@
             +38 096 111 11 11</a>
     </div>
     </div>
-    </header>    
-        <section class="main-title">
+    </header>     -->
+        <!-- <section class="main-title">
             <div class="container main-title__section">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="main-title__btn" data-modal-open>Заказать услугу</button>
         </div>
-        </section>
+        </section> -->
     <main>
-        <section class="points">
+        <!-- <section class="points">
             <div class="container points__section symbols">
                 <ul class="symbols-list list">
                     <li class="symbols-list__item">
@@ -107,8 +107,8 @@
                 </li>
             </ul>
             </div>
-        </section>
-        <section class="products">
+        </section> -->
+        <!-- <section class="products">
             <div class="container products__section">
             <h2 class="h2">Чем мы занимаемся</h2>
             <ul class="products-list list">
@@ -141,7 +141,7 @@
                 </li>
             </ul>
             </div>
-        </section>
+        </section> -->
         <section class="team">
         <div class="container team__section">
         <h2 class="h2">Наша команда</h2>
@@ -325,7 +325,7 @@
         </ul>
         </div>
         </section>
-        <section class="clients">
+        <!-- <section class="clients">
             <div class="container clients__block">
             <h2 class="h2">Постоянные клиенты</h2>
             <ul class="clients-list list">
@@ -373,9 +373,9 @@
                 </li>
             </ul>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer__full">
         <div class="container-1 footer__adress">
         <a href="" class="footer__logo link logo-span--color-light"><span class="web">Web</span>Studio</a>
@@ -438,8 +438,8 @@
                 </a>
             </li>
         </ul>
-        </div>
-        <div class="container-2 footer__subscribe subscribe"> 
+        </div> -->
+        <!-- <div class="container-2 footer__subscribe subscribe"> 
             <h4 class="h4">Подпишитесь на рассылку</h4>
             <form name="subscribe-form" class="subscribe-form" autocomplete="on" novalidate>
                 <input type="email" name="email" placeholder="E-mail" class="subscribe-form__input"/>
@@ -453,7 +453,7 @@
             </form>
         </div>
         </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal" >
             <button type="button" class="modal__close-btn" data-modal-close><svg class="modal__close-btn__icon" width="18px" height="18px">
