--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </ul>
             </div>
         </section> -->
-        <!-- <section class="products">
+        <section class="products">
             <div class="container products__section">
             <h2 class="h2">Чем мы занимаемся</h2>
             <ul class="products-list list">
@@ -141,7 +141,7 @@
                 </li>
             </ul>
             </div>
-        </section> -->
+        </section>
         <section class="team">
         <div class="container team__section">
         <h2 class="h2">Наша команда</h2>
