--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <ul class="products-list list">
                 <li class="products-list__item">
                     <img
+                    class="products__img"
                     src="./images/img-1.jpg" 
                     alt="рабочий процес"
                     width="370"  
@@ -123,6 +124,7 @@
                     </li>
                 <li class="products-list__item">
                     <img 
+                    class="products__img"
                     src="./images/img-2.jpg" 
                     alt="рабочий процес"
                     width="370" 
@@ -132,6 +134,7 @@
                 </li>
                 <li class="products-list__item">
                     <img 
+                    class="products__img"
                     src="./images/img-3.jpg" 
                     alt="рабочий процес"
                     width="370" 
