--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         </section> -->
     <main>
-        <!-- <section class="points">
+        <section class="points">
             <div class="container points__section symbols">
                 <ul class="symbols-list list">
                     <li class="symbols-list__item">
@@ -107,7 +107,7 @@
                 </li>
             </ul>
             </div>
-        </section> -->
+        </section>
         <section class="products">
             <div class="container products__section">
             <h2 class="h2">Чем мы занимаемся</h2>
