--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         </div>
         </section> -->
     <main>
-        <!-- <section class="points">
+        <section class="points">
             <div class="container points__section symbols">
                 <ul class="symbols-list list">
                     <li class="symbols-list__item">
+                        
                         <a class="symbols-list__link link">
                             <svg class="symbols-list__icon" 
                             width="65,32"
@@ -65,6 +66,10 @@
                         <use href="./images/icons.svg#icon-antenna"></use>
                     </svg>
                         </a>
+                        <div class="symbols__under">
+                            <h3 class="points-list__title">Внимание к деталям</h3>
+                            <p class="points-list__pre-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        </div>
                     </li>
                     <li class="symbols-list__item">
                         <a class="symbols-list__link link">
@@ -72,6 +77,11 @@
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </a>
+                        <div class="symbols__under">
+                            <h3 class="points-list__title">Пунктуальность</h3>
+                            <p class="points-list__pre-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                        </p>
+                        </div>
                     </li>
                     <li class="symbols-list__item">
                         <a class="symbols-list__link link">
@@ -79,6 +89,11 @@
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </a>
+                        <div class="symbols__under">
+                            <h3 class="points-list__title">Планирование</h3>
+                            <p class="points-list__pre-title">Равным образом консультация с широким активом в значительной степени обуславливает.
+                            </p>
+                        </div>
                     </li>
                     <li class="symbols-list__item">
                         <a class="symbols-list__link link">
@@ -86,9 +101,13 @@
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </a>
+                        <div class="symbols__under">
+                            <h3 class="points-list__title">Современные технологии</h3>
+                            <p class="points-list__pre-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        </div>
                     </li>
                 </ul>
-            <ul class="points-list list">
+            <!-- <ul class="points-list list">
                 <li class="points-list__item">
                     <h3 class="points-list__title">Внимание к деталям</h3>
                     <p class="points-list__pre-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -105,9 +124,9 @@
                     <h3 class="points-list__title">Современные технологии</h3>
                     <p class="points-list__pre-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
-            </ul>
+            </ul> -->
             </div>
-        </section> -->
+        </section>
         <section class="products">
             <div class="container products__section">
             <h2 class="h2">Чем мы занимаемся</h2>
