--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     </div>
     </div>
     </header>     -->
-        <!-- <section class="main-title">
+        <section class="main-title">
             <div class="container main-title__section">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="main-title__btn" data-modal-open>Заказать услугу</button>
         </div>
-        </section> -->
+        </section>
     <main>
         <section class="points">
             <div class="container points__section symbols">
