--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
                 <li class="products-list__item">
                     <img
                     class="products__img"
+                    srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
                     src="./images/img-1.jpg" 
                     alt="рабочий процес"
                     width="370"  
@@ -144,6 +146,8 @@
                 <li class="products-list__item">
                     <img 
                     class="products__img"
+                    srcset="./images/img-2.jpg 1x, 
+                    ./images/img-2-2x.jpg 2x"
                     src="./images/img-2.jpg" 
                     alt="рабочий процес"
                     width="370" 
@@ -154,6 +158,8 @@
                 <li class="products-list__item">
                     <img 
                     class="products__img"
+                    srcset="./images/img-3.jpg 1x, 
+                    ./images/img-3-2x.jpg 2x"
                     src="./images/img-3.jpg" 
                     alt="рабочий процес"
                     width="370" 
