--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
         <ul class="team-list list">
             <li class="team-list__item">
                 <img 
+                class="team__img"
                 src="./images/img-4.jpg" 
                 alt="работник"
                 width="270"
@@ -226,6 +227,7 @@
             </li>
             <li class="team-list__item">
                 <img 
+                class="team__img"
                 src="./images/img-5.jpg" 
                 alt="работник"
                 width="270" 
@@ -268,6 +270,7 @@
             </li>
             <li class="team-list__item">
                 <img 
+                class="team__img"
                 src="./images/img-6.jpg" 
                 alt="работник"
                 width="270" 
@@ -310,6 +313,7 @@
             </li>
             <li class="team-list__item">
                 <img 
+                class="team__img"
                 src="./images/img-7.jpg" 
                 alt="работник"
                 width="270" 
