--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container header__container">
         <a href="" class="header__logo link logo-span--color-dark"><span class="web">Web</span>Studio</a>
             <nav class="header__navigation">
@@ -45,8 +45,15 @@
             </svg>
             +38 096 111 11 11</a>
     </div>
+    <div class="open-menu">
+        <button class="open-menu-btn">
+        <svg class="open-menu-btn__icon" width="24px" height="16px">
+            <use href="./images/icons.svg#icon-menu"></use>
+        </svg>
+    </button>
     </div>
-    </header>     -->
+    </div>
+    </header>    
         <section class="main-title">
             <div class="container main-title__section">
             <h1>Эффективные решения для вашего бизнеса</h1>
