--- a/index.html
+++ b/index.html
@@ -53,6 +53,25 @@
     </button>
     </div>
     </div>
+    <div class="mob-menu">
+        <button type="button" class="mob-menu__btn" data-modal-close><svg class="mob-menu__btn__icon" width="18px"
+                height="18px">
+                <use href="./images/icons.svg#icon-close-black">
+                </use>
+            </svg>
+        </button>
+        <ul class="mob-menu-list list">
+            <li class="mob-menu-list__item">
+                <a href="index.html" class="mob-menu-list__link link current">Студия</a>
+            </li>
+            <li class="mob-menu-list__item">
+                <a href="portfolio.html" class="mob-menu-list__link link">Портфолио</a>
+            </li>
+            <li class="mob-menu-list__item">
+                <a href="" class="mob-menu-list__link link">Контакты</a>
+            </li>
+        </ul>
+    </div>
     </header>    
         <section class="main-title">
             <div class="container main-title__section">
