--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
     </div>
     <div class="mob-menu">
+        <div class="container">
         <button type="button" class="mob-menu__btn" data-modal-close><svg class="mob-menu__btn__icon" width="18px"
                 height="18px">
                 <use href="./images/icons.svg#icon-close-black">
@@ -71,6 +72,30 @@
                 <a href="" class="mob-menu-list__link link">Контакты</a>
             </li>
         </ul>
+        <div class="mob-menu__connect">
+            <a href="mailto:info@devstudio.com" class="mob-menu__contacts link">
+                info@devstudio.com</a>
+        
+            <a href="tel:+38 096 111 11 11" class="mob-menu__contacts link">
+                +38 096 111 11 11</a>
+        </div>
+        <div class="mob-social">
+        <ul class="mob-menu-social-list list">
+            <li class="mob-menu-social__item">
+                <a class="mob-menu-social__link link">Instagram</a>
+            </li>
+            <li class="mob-menu-social__icon">
+                <a class="mob-menu-social__link link">Twitter</a>
+            </li>
+            <li class="mob-menu-social__icon">
+                <a class="mob-menu-social__link link">Facebook</a>
+            </li>
+            <li class="mob-menu-social__icon">
+                <a class="mob-menu-social__link link">LinkedIn</a>
+            </li>
+        </ul>
+    </div>
+        </div>
     </div>
     </header>    
         <section class="main-title">
