--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
     </div>
     <div class="mob-menu">
         <div class="container">
-        <button type="button" class="mob-menu__btn" data-modal-close><svg class="mob-menu__btn__icon" width="18px"
-                height="18px">
+        <button type="button" class="mob-menu__btn" data-modal-close><svg class="mob-menu__btn__icon" width="40px"
+                height="40px">
                 <use href="./images/icons.svg#icon-close-black">
                 </use>
             </svg>
         </button>
         <ul class="mob-menu-list list">
             <li class="mob-menu-list__item">
-                <a href="index.html" class="mob-menu-list__link link current">Студия</a>
+                <a href="index.html" class="mob-menu-list__link link ">Студия</a>
             </li>
             <li class="mob-menu-list__item">
                 <a href="portfolio.html" class="mob-menu-list__link link">Портфолио</a>
@@ -73,7 +73,7 @@
             </li>
         </ul>
         <div class="mob-menu__connect">
-            <a href="mailto:info@devstudio.com" class="mob-menu__contacts link">
+            <a href="mailto:info@devstudio.com" class="mob-menu__contacts-mail link">
                 info@devstudio.com</a>
         
             <a href="tel:+38 096 111 11 11" class="mob-menu__contacts link">
@@ -82,7 +82,10 @@
         <div class="mob-social">
         <ul class="mob-menu-social-list list">
             <li class="mob-menu-social__item">
-                <a class="mob-menu-social__link link">Instagram</a>
+                <a class="mob-menu-social__link link" >Instagram</a>
+                <!-- <svg class="mob-menu-social__icon" width="1px" height="16px">
+                    <use href="./images/icons.svg#icon-Line"></use>
+                </svg> -->
             </li>
             <li class="mob-menu-social__icon">
                 <a class="mob-menu-social__link link">Twitter</a>
