--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </div>
     <div class="mob-menu">
         <div class="container">
+            <div class="mob-menu-top">
         <button type="button" class="mob-menu__btn" data-modal-close><svg class="mob-menu__btn__icon" width="40px"
                 height="40px">
                 <use href="./images/icons.svg#icon-close-black">
@@ -72,31 +73,36 @@
                 <a href="" class="mob-menu-list__link link">Контакты</a>
             </li>
         </ul>
+        </div>
+        <div class="mob-menu-bottom">
         <div class="mob-menu__connect">
-            <a href="mailto:info@devstudio.com" class="mob-menu__contacts-mail link">
+             <a href="tel:+38 096 111 11 11" class="mob-menu__contacts link">
+                +38 096 111 11 11</a>
+                <a href="mailto:info@devstudio.com" class="mob-menu__contacts-mail link">
                 info@devstudio.com</a>
         
-            <a href="tel:+38 096 111 11 11" class="mob-menu__contacts link">
-                +38 096 111 11 11</a>
+           
         </div>
         <div class="mob-social">
         <ul class="mob-menu-social-list list">
             <li class="mob-menu-social__item">
                 <a class="mob-menu-social__link link" >Instagram</a>
+                <div class="line"></div>
                 <!-- <svg class="mob-menu-social__icon" width="1px" height="16px">
                     <use href="./images/icons.svg#icon-Line"></use>
                 </svg> -->
             </li>
-            <li class="mob-menu-social__icon">
+            <li class="mob-menu-social__item">
                 <a class="mob-menu-social__link link">Twitter</a>
             </li>
-            <li class="mob-menu-social__icon">
+            <li class="mob-menu-social__item">
                 <a class="mob-menu-social__link link">Facebook</a>
             </li>
-            <li class="mob-menu-social__icon">
+            <li class="mob-menu-social__item">
                 <a class="mob-menu-social__link link">LinkedIn</a>
             </li>
         </ul>
+    </div>
     </div>
         </div>
     </div>
