--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             +38 096 111 11 11</a>
     </div>
     <div class="open-menu">
-        <button class="open-menu-btn">
+        <button type="button" class="open-menu-btn">
         <svg class="open-menu-btn__icon" width="24px" height="16px">
             <use href="./images/icons.svg#icon-menu"></use>
         </svg>
@@ -596,5 +596,6 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
