--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </button>
     </div>
     </div>
-    <div class="mob-menu">
+    <div class="mob-menu is-hidden">
         <div class="container">
             <div class="mob-menu-top">
         <button type="button" class="mob-menu__btn" data-modal-close><svg class="mob-menu__btn__icon" width="40px"
