--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="footer">
+  <footer class="footer">
         <div class="container footer__full">
         <div class="container-1 footer__adress">
         <a href="" class="footer__logo link logo-span--color-light"><span class="web">Web</span>Studio</a>
@@ -530,8 +530,8 @@
                 </a>
             </li>
         </ul>
-        </div> -->
-        <!-- <div class="container-2 footer__subscribe subscribe"> 
+        </div> 
+       <div class="container-2 footer__subscribe subscribe"> 
             <h4 class="h4">Подпишитесь на рассылку</h4>
             <form name="subscribe-form" class="subscribe-form" autocomplete="on" novalidate>
                 <input type="email" name="email" placeholder="E-mail" class="subscribe-form__input"/>
@@ -545,7 +545,7 @@
             </form>
         </div>
         </div>
-    </footer> -->
+    </footer> 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal" >
             <button type="button" class="modal__close-btn" data-modal-close><svg class="modal__close-btn__icon" width="18px" height="18px">
