--- a/portfolio.html
+++ b/portfolio.html
@@ -45,11 +45,72 @@
                 </svg>
                 +38 096 111 11 11</a>
         </div>
+        <div class="open-menu">
+            <button type="button" class="open-menu-btn">
+                <svg class="open-menu-btn__icon" width="24px" height="16px">
+                    <use href="./images/icons.svg#icon-menu"></use>
+                </svg>
+            </button>
+        </div>
+        </div>
+        <div class="mob-menu is-hidden">
+            <div class="container">
+                <div class="mob-menu-top">
+                    <button type="button" class="mob-menu__btn" data-modal-close><svg class="mob-menu__btn__icon" width="40px"
+                            height="40px">
+                            <use href="./images/icons.svg#icon-close-black">
+                            </use>
+                        </svg>
+                    </button>
+                    <ul class="mob-menu-list list">
+                        <li class="mob-menu-list__item">
+                            <a href="index.html" class="mob-menu-list__link link ">Студия</a>
+                        </li>
+                        <li class="mob-menu-list__item">
+                            <a href="portfolio.html" class="mob-menu-list__link link">Портфолио</a>
+                        </li>
+                        <li class="mob-menu-list__item">
+                            <a href="" class="mob-menu-list__link link">Контакты</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mob-menu-bottom">
+                    <div class="mob-menu__connect">
+                        <a href="tel:+38 096 111 11 11" class="mob-menu__contacts link">
+                            +38 096 111 11 11</a>
+                        <a href="mailto:info@devstudio.com" class="mob-menu__contacts-mail link">
+                            info@devstudio.com</a>
+        
+        
+                    </div>
+                    <div class="mob-social">
+                        <ul class="mob-menu-social-list list">
+                            <li class="mob-menu-social__item">
+                                <a class="mob-menu-social__link link">Instagram</a>
+                                <div class="line"></div>
+                                <!-- <svg class="mob-menu-social__icon" width="1px" height="16px">
+                            <use href="./images/icons.svg#icon-Line"></use>
+                        </svg> -->
+                            </li>
+                            <li class="mob-menu-social__item">
+                                <a class="mob-menu-social__link link">Twitter</a>
+                            </li>
+                            <li class="mob-menu-social__item">
+                                <a class="mob-menu-social__link link">Facebook</a>
+                            </li>
+                            <li class="mob-menu-social__item">
+                                <a class="mob-menu-social__link link">LinkedIn</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </header>
  <main class="main">
     <section class="kinds">
-        <div class="container-3 kinds__section">
+        <!-- <div class="container-3 kinds__section">
         <ul class="kinds-list list">
             <li class="kinds-list__item">
                 <button type="button" class="kinds-list__btn">Все</button>
@@ -67,12 +128,13 @@
                 <button type="button" class="kinds-list__btn">Маркетинг</button>
             </li>
         </ul>  
-    </div>
+    </div> -->
         <div class="container kinds__photo">
     <ul class="photo-list list">
         <li class="photo-list__item">
             <div class="photo-list__item__wrap">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-1.jpg" 
             alt="продукт"
             width="370"
@@ -90,6 +152,7 @@
         </li>
         <li class="photo-list__item">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-2.jpg"
              alt="продукт"
              width="370"
@@ -102,6 +165,7 @@
             </li>
         <li class="photo-list__item">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-3.jpg" 
             alt="продукт"
             width="370"
@@ -114,6 +178,7 @@
         </li>
         <li class="photo-list__item">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-4.jpg" 
             alt="продукт"
             width="370"
@@ -126,6 +191,7 @@
         </li>
         <li class="photo-list__item">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-5.jpg" 
             alt="продукт"
             width="370"
@@ -138,6 +204,7 @@
         </li>
         <li class="photo-list__item">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-6.jpg" 
             alt="продукт"
             width="370"
@@ -150,6 +217,7 @@
         </li>
         <li class="photo-list__item">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-7.jpg" 
             alt="продукт"
             width="370"
@@ -162,6 +230,7 @@
         </li>
         <li class="photo-list__item">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-8.jpg" 
             alt="продукт"
             width="370"
@@ -174,6 +243,7 @@
         </li>
         <li class="photo-list__item">
             <img
+            class="portfolio-img"
             src="images/portfolio-img-9.jpg" 
             alt="продукт"
             width="370"
