--- a/portfolio.html
+++ b/portfolio.html
@@ -260,6 +260,7 @@
  </main>
 <footer class="footer">
     <div class="container footer__full">
+        <div class="footer-top">
         <div class="container-1 footer__adress">
             <a href="" class="footer__logo link logo-span--color-light"><span class="web">Web</span>Studio</a>
             <address>
@@ -311,6 +312,7 @@
                     </a>
                 </li>
             </ul>
+        </div>
         </div>
         <div class="container-2 footer__subscribe subscribe">
             <h4 class="h4">Подпишитесь на рассылку</h4>
