--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
 </header>
  <main class="main">
     <section class="kinds">
-        <!-- <div class="container-3 kinds__section">
+        <div class="container-3 kinds__section">
         <ul class="kinds-list list">
             <li class="kinds-list__item">
                 <button type="button" class="kinds-list__btn">Все</button>
@@ -128,7 +128,7 @@
                 <button type="button" class="kinds-list__btn">Маркетинг</button>
             </li>
         </ul>  
-    </div> -->
+    </div>
         <div class="container kinds__photo">
     <ul class="photo-list list">
         <li class="photo-list__item">
