--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
   <footer class="footer">
         <div class="container footer__full">
             <div class="footer-top">
-        <div class="container-1 footer__adress">
+        <div class="container-1 footer__adress adress">
         <a href="" class="footer__logo link logo-span--color-light"><span class="web">Web</span>Studio</a>
         <address>
             <ul class="footer-contact-list list">
