--- a/portfolio.html
+++ b/portfolio.html
@@ -135,6 +135,8 @@
             <div class="photo-list__item__wrap">
             <img
             class="portfolio-img"
+              srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
             src="images/portfolio-img-1.jpg" 
             alt="продукт"
             width="370"
@@ -153,6 +155,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
+              srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
             src="images/portfolio-img-2.jpg"
              alt="продукт"
              width="370"
@@ -166,6 +170,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
+              srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
             src="images/portfolio-img-3.jpg" 
             alt="продукт"
             width="370"
@@ -179,6 +185,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
+              srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
             src="images/portfolio-img-4.jpg" 
             alt="продукт"
             width="370"
@@ -192,6 +200,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
+              srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
             src="images/portfolio-img-5.jpg" 
             alt="продукт"
             width="370"
@@ -205,6 +215,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
+              srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
             src="images/portfolio-img-6.jpg" 
             alt="продукт"
             width="370"
@@ -218,6 +230,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
+              srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
             src="images/portfolio-img-7.jpg" 
             alt="продукт"
             width="370"
@@ -231,6 +245,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
+              srcset="./images/img-1.jpg 1x, 
+                    ./images/img-1-2x.jpg 2x"
             src="images/portfolio-img-8.jpg" 
             alt="продукт"
             width="370"
@@ -244,6 +260,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
+              srcset="./images/portfolio-img-9.jpg 1x, 
+                    ./images/portfolio-img-9-2x.jpg 2x"
             src="images/portfolio-img-9.jpg" 
             alt="продукт"
             width="370"
