--- a/portfolio.html
+++ b/portfolio.html
@@ -135,8 +135,8 @@
             <div class="photo-list__item__wrap">
             <img
             class="portfolio-img"
-              srcset="./images/img-1.jpg 1x, 
-                    ./images/img-1-2x.jpg 2x"
+            srcset="./images/portfolio-img-1.jpg 1x, 
+                    ./images/portfolio-img-1-2x.jpg 2x"
             src="images/portfolio-img-1.jpg" 
             alt="продукт"
             width="370"
@@ -155,8 +155,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
-              srcset="./images/img-1.jpg 1x, 
-                    ./images/img-1-2x.jpg 2x"
+             srcset="./images/portfolio-img-2.jpg 1x, 
+                    ./images/portfolio-img-2-2x.jpg 2x"
             src="images/portfolio-img-2.jpg"
              alt="продукт"
              width="370"
@@ -170,8 +170,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
-              srcset="./images/img-1.jpg 1x, 
-                    ./images/img-1-2x.jpg 2x"
+             srcset="./images/portfolio-img-3.jpg 1x, 
+                    ./images/portfolio-img-3-2x.jpg 2x"
             src="images/portfolio-img-3.jpg" 
             alt="продукт"
             width="370"
@@ -185,8 +185,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
-              srcset="./images/img-1.jpg 1x, 
-                    ./images/img-1-2x.jpg 2x"
+             srcset="./images/portfolio-img-4.jpg 1x, 
+                    ./images/portfolio-img-4-2x.jpg 2x"
             src="images/portfolio-img-4.jpg" 
             alt="продукт"
             width="370"
@@ -200,8 +200,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
-              srcset="./images/img-1.jpg 1x, 
-                    ./images/img-1-2x.jpg 2x"
+             srcset="./images/portfolio-img-5.jpg 1x, 
+                    ./images/portfolio-img-5-2x.jpg 2x"
             src="images/portfolio-img-5.jpg" 
             alt="продукт"
             width="370"
@@ -215,8 +215,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
-              srcset="./images/img-1.jpg 1x, 
-                    ./images/img-1-2x.jpg 2x"
+             srcset="./images/portfolio-img-6.jpg 1x, 
+                    ./images/portfolio-img-6-2x.jpg 2x"
             src="images/portfolio-img-6.jpg" 
             alt="продукт"
             width="370"
@@ -230,8 +230,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
-              srcset="./images/img-1.jpg 1x, 
-                    ./images/img-1-2x.jpg 2x"
+           srcset="./images/portfolio-img-7.jpg 1x, 
+                    ./images/portfolio-img-7-2x.jpg 2x"
             src="images/portfolio-img-7.jpg" 
             alt="продукт"
             width="370"
@@ -245,8 +245,8 @@
         <li class="photo-list__item">
             <img
             class="portfolio-img"
-              srcset="./images/img-1.jpg 1x, 
-                    ./images/img-1-2x.jpg 2x"
+            srcset="./images/portfolio-img-8.jpg 1x, 
+                    ./images/portfolio-img-8-2x.jpg 2x"
             src="images/portfolio-img-8.jpg" 
             alt="продукт"
             width="370"
