--- a/portfolio.html
+++ b/portfolio.html
@@ -136,7 +136,7 @@
             <img
             class="portfolio-img"
             srcset="./images/portfolio-img-1.jpg 1x, 
-            ./images/portfolio-img-1-2x.jpg 2x"
+            ./images/portfolio-img-1-2x.png 2x"
             src="images/portfolio-img-1.jpg" 
             alt="продукт"
             width="370"
